# glos

./: .gitignore  AUTHOR.md  BUGS  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  renovate.json  rustfmt.toml  taplo.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml  enhancement.yml  feature.yml  question.yml
.github/actions/install-sdr-deps/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  develop.yml  hardware-optional.yml  release.yml  semantic-pull-request.yml
benches/: Cargo.toml  README.md
benches/benches/recorder_benchmark/: recorder_bench.rs
docs/: ARCHITECTURE.md  QUICK_START.md  glos_file_format_spec_v1_0.md  project_structure.md  ТЕСТИРОВАНИЕ.md  схема_проекта.md
glos-analyzer/: .gitignore  Cargo.toml  Makefile  README.md
glos-analyzer/docs/: project_structure.md  схема_проекта.md
glos-analyzer/src/: lib.rs  main.rs  spectrum.rs
glos-cli/: Cargo.toml  LICENSE  Makefile  README.md
glos-cli/docs/: project_structure.md  схема_проекта.md
glos-cli/src/: main.rs
glos-core/: .gitignore  Cargo.toml  LICENSE  LICENSE.MIT  Makefile  README.md
glos-core/docs/: project_structure.md  схема_проекта.md
glos-core/examples/: read_glos_file.rs  write_glos_file.rs
glos-core/src/: error.rs  format.rs  lib.rs  replayer.rs  serialization.rs
glos-core/src/binary/: read.rs  write.rs
glos-core/tests/: integration_tests.rs
glos-hal/: Cargo.toml  README.md
glos-hal/docs/: project_structure.md
glos-hal/src/: device.rs  error.rs  hackrf.rs  lib.rs  lime.rs  pluto.rs  sim.rs  types.rs  usrp.rs
glos-recorder/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
glos-recorder/docs/: project_structure.md  схема_проекта.md
glos-recorder/src/: config.rs  device.rs  error.rs  lib.rs  main.rs  metrics.rs  pipeline.rs
glos-replayer/: Cargo.toml  LICENSE  Makefile  README.md
glos-replayer/docs/: project_structure.md  схема_проекта.md
glos-replayer/src/: config.rs  error.rs  lib.rs  main.rs  replayer.rs  session.rs
glos-replayer/tests/: integration_tests.rs
glos-types/: Cargo.toml  README.md
glos-types/docs/: project_structure.md  схема_проекта.md
glos-types/src/: compression.rs  error.rs  header.rs  iq_block.rs  iq_format.rs  lib.rs  sdr.rs
glos-ui/: Cargo.toml  LICENSE  Makefile  README.md
glos-ui/docs/: project_structure.md  схема_проекта.md
glos-ui/src/: app.rs  lib.rs  main.rs  theme.rs
glos-ui/src/data/: export.rs  mock.rs  mod.rs  state.rs
glos-ui/src/panels/: dashboard.rs  logs.rs  mod.rs  satellites.rs  settings.rs  signals.rs
tools/: README.md  udp_server.py
