[workspace.package]
version = "0.1.0"
authors = ["Mikhail <mikhail.f.zhuravlev@gmail.com>"]
edition = "2021"
homepage = "https://github.com/MiCkEyZzZ/glos"
repository = "https://github.com/MiCkEyZzZ/glos"
keywords = [
    "gnss",
    "glonass",
    "sdr",
    "signal-processing",
    "iq-data",
    "radio",
    "dsp",
]
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "glos-core",
    "glos-ui",
    "glos-recorder",
    "glos-replayer",
    "glos-analyzer",
    "glos-cli",
    "glos-types",
    "glos-hal",
    "benches",
]

# Общие зависимости (опционально)
[workspace.dependencies]
anyhow = "1.0"
criterion = { version = "0.6.0", features = ["async"] }
crossbeam-channel = "0.5"
env_logger = "0.11"
hackrfone = "0.4.0"
image = "0.25.9"
libc = "0.2"
log = "0.4"
lz4 = "1.28.1"
lz4_flex = { version = "0.12", default-features = false }
rustfft = "6.4.1"
signal-hook = "0.4.3"

# Random для примеров (опционально)
rand = "0.8"

byteorder = "1.4.3"
crc32fast = "1.5.0"
tempfile = "3.23.0"
thiserror = "2.0.17"

clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Настройки сборки (общие)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
