[workspace.package]
version = "0.1.0"
authors = ["Mikhail <mikhail.f.zhuravlev@gmail.com>"]
edition = "2021"
rust-version = "1.82"
description = "GLONASS Signal Recorder & Playback Tool"
homepage = "https://github.com/MiCkEyZzZ/glos"
repository = "https://github.com/MiCkEyZzZ/glos"
keywords = ["gnss", "glonass", "sdr", "signal-processing", "iq-data"]
categories = ["science", "hardware-support", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "glos-core",
    "glos-ui",
    "glos-recorder",
    "glos-replayer",
    "glos-analyzer",
    "glos-cli",
    "glos-types",
    "glos-hal",
    "benches",
]

# Общие зависимости (опционально)
[workspace.dependencies]
# Утилиты
anyhow = "1.0"
byteorder = "1.4.3"
crc32fast = "1.5.0"
thiserror = "2.0.17"

# CLI / логирование
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
env_logger = "0.11"
log = "0.4"
signal-hook = "0.4.3"

# Сериализация
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Компрессия
lz4_flex = { version = "0.12", default-features = false }

# DSP / математика
rustfft = "6.4.1"

# Concurrency
crossbeam-channel = "0.5"

# SDR / hardware
hackrfone = "0.4.0"
libc = "0.2"

# Тесты / dev
criterion = { version = "0.6.0", features = ["async"] }
image = "0.25.9"
lz4 = "1.28.1"
rand = "0.8"
tempfile = "3.23.0"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

# Зависимости в dev-режиме компилируются с оптимизацией —
# критично для DSP/FFT где без оптимизации производительность неприемлема
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"        # thin LTO — хороший баланс скорости и размера
codegen-units = 1
strip = "debuginfo"

# Профиль для профилирования: release + debug-символы
[profile.profiling]
inherits = "release"
debug = true
strip = "none"

# Профиль для bench: наследует release, добавляет debug-символы
[profile.bench]
inherits = "release"
debug = true
