[package]
name = "glos-benchmark"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Benchmark tests"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[[bench]]
name = "glos-benchmark"
path = "benches/recorder_benchmark/recorder_bench.rs"
harness = false

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
