[package]
name = "glos-analyzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "GLOS IQ signal analyzer — spectrum, waterfall, peak detection"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[dependencies]
glos-core = { path = "../glos-core" }
glos-types = { path = "../glos-types" }

clap = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
log = { workspace = true }
rustfft = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
