[package]
name = "glos-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mikhail <mikhail.f.zhuravlev@gmail.com>"]
license = "Apache-2.0"
description = ""
repository = "https://github.com/MiCkEyZzZ/glos/glos-cli"
readme = "README.md"
homepage = "https://github.com/MiCkEyZzZ/glos/glos-cli"
publish = false

[dependencies]
