[package]
name = "glos-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Спецификация формата файла GLOS и эталонная реализация"
repository = "https://github.com/MiCkEyZzZ/glos/glos_core"
readme = "README.md"
homepage = "https://github.com/MiCkEyZzZ/glos/glos_core"
publish = false
license.workspace = true

[lib]
name = "glos_core"
path = "src/lib.rs"

[dependencies]
glos-types = { path = "../glos-types" }

byteorder = { workspace = true }
crc32fast = { workspace = true }
lz4 = { workspace = true }
lz4_flex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
