[package]
name = "glos-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Core implementation logic of glos, the cross-platfowm, safe API"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[lib]
name = "glos_core"
path = "src/lib.rs"

[dependencies]
glos-types = { path = "../glos-types" }

byteorder = { workspace = true }
crc32fast = { workspace = true }
lz4 = { workspace = true }
lz4_flex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
