[package]
name = "glos-recorder"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "GLOS IQ signal recorder — streams SDR samples to .glos files"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[dependencies]
glos-core = { path = "../glos-core" }
glos-types = { path = "../glos-types" }

clap = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
env_logger = { workspace = true }
hackrfone = { workspace = true, optional = true }
log = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[features]
# Это не обртка над libhackrf, а переработка libhackrf на Rust
# с использованием пользовательской библиотеки Rust nusb.
# Для полной поддержки ф-й лучше использовать официальную библиотеку
# libhackrf написанную на Си.
hackrf = ["hackrfone"]
default = []
