[package]
name = "glos-replayer"
authors.workspace = true
edition.workspace = true
description = "GLOS IQ signal replayer - stream .glos recording over UDP"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[dependencies]
glos-core = { path = "../glos-core" }
glos-types = { path = "../glos-types" }

clap = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
env_logger = { workspace = true }
log = { workspace = true }
signal-hook = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
