[package]
name = "glos-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Common types and utilities for glos, teh cross-platform, safe API"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
