[package]
name = "glos-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "GLOS UI"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "glos-ui"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
eframe = "0.33.0"
egui = "0.33"
egui_extras = { version = "0.33.0", features = ["file"] }
egui_plot = "0.34"
env_logger = "0.11.8"
parking_lot = "0.12.5"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = []
mock = []

[dev-dependencies]
approx = "0.5.1"
